# verilambda

./: .gitignore  LICENSE-BSD  PLAN.md  README.md  REUSE.toml  Setup.hs  cabal.project  flake.nix  fourmolu.yaml  verilambda.cabal
.github/workflows/: ci.yml
LICENSES/: MIT.txt
examples/blinky/: blinky.cabal  build-and-run.sh  package.nix
examples/blinky/cbits/: verilambda_blinky_shim.cpp  verilambda_blinky_shim.h
examples/blinky/src/: Main.hs
examples/blinky/verilog/: blinky.v
nix/: checks.nix  default.nix  devshell.nix  treefmt.nix
pkgs/: default.nix
shim-gen/: Main.hs
shim-gen/src/Verilambda/ShimGen/: CppTemplate.hs
src/: Verilambda.hs
src/Verilambda/: BuildDriver.hs  Expectations.hs  Manifest.hs  Ports.hs  Setup.hs  Sim.hs  Types.hs
test/: Main.hs
test/Verilambda/: BuildDriverSpec.hs  ManifestSpec.hs  PortsSpec.hs  TypesSpec.hs
test/fixtures/: blinky-manifest.json
