cabal-version:      3.0
name:               verilambda
version:            0.0.0
synopsis:           Haskell bindings for Verilator simulation
description:
  verilambda is an actively-maintained, type-preserving alternative to
  clashilator. It lets you write hardware testbenches for
  Verilator-compiled designs in idiomatic monadic Haskell, with
  type-level port reflection via higher-kinded data.
  .
  Pre-release. First tagged version is in progress; expect API churn
  until v0.1.0.

license:            (MIT OR BSD-3-Clause)
license-files:
  LICENSE-BSD
  LICENSE-MIT

author:             Mika Tammi
maintainer:         mikatammi@gmail.com
copyright:          2026 Mika Tammi
category:           Hardware
build-type:         Custom
extra-source-files:
  PLAN.md
  README.md

tested-with:        GHC ==9.10.3

source-repository head
  type:     git
  location: https://github.com/mikatammi/verilambda

custom-setup
  setup-depends:
    , base
    , Cabal  >=3.0

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

common language
  default-language:   GHC2021
  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    TypeFamilies
    UndecidableInstances

library
  import:          warnings, language
  exposed-modules:
    Verilambda
    Verilambda.Manifest
    Verilambda.Ports
    Verilambda.Types

  build-depends:
    , aeson          >=2.2  && <2.3
    , base           >=4.20 && <5
    , bytestring     >=0.12 && <0.13
    , clash-prelude  ^>=1.8
    , containers     >=0.7  && <0.9
    , text           >=2.1  && <2.2

  hs-source-dirs:  src

test-suite verilambda-test
  import:         warnings, language
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Verilambda.ManifestSpec
    Verilambda.PortsSpec
    Verilambda.TypesSpec

  hs-source-dirs: test
  build-depends:
    , base
    , bytestring
    , clash-prelude
    , containers
    , hedgehog        >=1.4  && <2
    , tasty           >=1.5  && <1.6
    , tasty-hedgehog  >=1.4  && <1.5
    , tasty-hunit     >=0.10 && <0.11
    , verilambda
