cabal-version: 3.0

-- SPDX-FileCopyrightText: 2026 Mika Tammi
-- SPDX-License-Identifier: MIT OR BSD-3-Clause
name:          verilambda-example-blinky
version:       0.0.0
synopsis:      End-to-end verilambda demo on the DE2 Blinky design
license:       (MIT OR BSD-3-Clause)
author:        Mika Tammi
maintainer:    mikatammi@gmail.com
copyright:     2026 Mika Tammi
category:      Hardware
build-type:    Simple
tested-with:   GHC ==9.10.3

executable blinky-sim
  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies

  ghc-options:        -Wall -Wcompat
  build-depends:
    , base           >=4.20 && <5
    , clash-prelude  ^>=1.8
    , verilambda

-- The C++ shim + Verilator runtime are built upstream and linked via
--   cabal configure --extra-lib-dirs=PATH_TO_LIBS \
--                   --ghc-options="-lVblinky -lverilated -lstdc++"
-- The Nix derivation (examples/blinky/package.nix) supplies these
-- flags automatically; the shell script `build-and-run.sh` passes the
-- equivalent CLI args.
